# upstage-network-lecture

./: .env.example  main.py  pyproject.toml  stop.sh
.github/workflows/: ci.yml  deploy-release.yml
app/: deps.py  logging.py
app/api/route/: user_routers.py
app/core/: db.py
app/models/entities/: conversation.py  users.py
app/repository/: user_repo.py  vector_repo.py
app/service/: user_service.py
static/css/: style.css
static/js/: main.js
template/: index.html
