[project]
name = "upstage-network-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.29",
    "sqlalchemy-serializer>=1.4.22",
    "uvicorn[standard]>=0.38.0",
]
